# sci-aware-msa-placement

./: .gitignore  .ruff.toml  pyproject.toml
plots/: plots.ipynb
results/notebooks/: clean-raw.ipynb  plot.ipynb
results/parquets/: raw-sci-aware.parquet
results/parquets/exp-1/: clean-sci-aware.parquet
results/parquets/exp-2/: clean-sci-aware.parquet  raw-sci-aware.parquet
results/parquets/exp-3/: clean-sci-aware.parquet  raw-sci-aware.parquet
results/parquets/exp-4/: clean-sci-aware.parquet  raw-sci-aware.parquet
sci_aware_msa_placement/: builder.py  experiment.py  main.py  models.py  search_space.py  settings.py  utils.py
src/: wrapper.py
src/prolog/: main.pl  utils.pl
src/testing/: data.py  generate.py  plot.py  settings.py  testing.py
