[project]
name = "sci-aware-msa-placement"
version = "0.1.0"
description = ""
authors = [{ name = "Jacopo Massa", email = "jacopomassa97@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "swiplserver (>=1.0.2,<2.0.0)",
    "ray[tune] (>=2.54.0,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "numpy (>=2.4.3,<3.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 2
filter_files = true
skip = ["__init__.py"]

[dependency-groups]
dev = ["ruff (>=0.15.6,<0.16.0)", "isort (>=8.0.1,<9.0.0)"]

[tool.poetry.scripts]
sci-aware = "sci_aware_msa_placement.main:main"
debug = "sci_aware_msa_placement.main:debug_main"
